fix: main overflow

--- a/src/components/WhatsappComponent/index.css
+++ b/src/components/WhatsappComponent/index.css
@@ -15,7 +15,7 @@
     font-size: 3px;
     box-shadow: 2px 2px 3px #999;
     z-index: 100;
-    right: 12px;
+    right: 28px;
   }
   svg {
     padding: 5px;
