--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+
 /* Add this to your CSS file */
 .fade-in {
   opacity: 0;
